[gd_scene load_steps=18 format=4 uid="uid://cqtw5o72kauuo"]

[ext_resource type="PackedScene" uid="uid://dyl1lkn4qie8l" path="res://scenes/PinkPlayer.tscn" id="1_ppqqo"]
[ext_resource type="Script" path="res://scenes/Level2.gd" id="1_wrs2e"]
[ext_resource type="Texture2D" uid="uid://te72w2hkhv0x" path="res://assets/Pixel Adventure 1/Free/Terrain/Terrain (16x16).png" id="2_7h07t"]
[ext_resource type="Script" path="res://scenes/PinkPlayer.gd" id="2_wsqd8"]
[ext_resource type="Script" path="res://scenes/DeathArea.gd" id="4_kifog"]
[ext_resource type="Texture2D" uid="uid://c77q7xa825ok" path="res://assets/kenney_platformerpack/PNG/Backgrounds/blue_shroom.png" id="5_y3ypb"]
[ext_resource type="Script" path="res://scenes/AreaTrigger.gd" id="6_qbf1l"]
[ext_resource type="Texture2D" uid="uid://2fsokh1rx07r" path="res://assets/Pixel Adventure 1/Free/Items/Checkpoints/Checkpoint/Checkpoint (Flag Idle)(64x64).png" id="7_tg0eh"]
[ext_resource type="Script" path="res://scenes/Spawner.gd" id="9_om0mb"]
[ext_resource type="PackedScene" uid="uid://br6lufrucc4pc" path="res://scenes/Obstacle.tscn" id="10_kiunl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f76wo"]
texture = ExtResource("2_7h07t")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:0/0 = 0
18:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:0/0 = 0
19:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:4/0 = 0
18:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:4/0 = 0
20:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:4/0 = 0
21:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
17:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:5/0 = 0
18:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:5/0 = 0
19:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:5/0 = 0
20:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:5/0 = 0
21:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:6/0 = 0
18:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:6/0 = 0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
17:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:8/0 = 0
18:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:8/0 = 0
19:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:8/0 = 0
20:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:9/0 = 0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:9/0 = 0
19:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:9/0 = 0
20:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:10/0 = 0
19:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:10/0 = 0
20:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_uqbpu"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_f76wo")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xtaw0"]
size = Vector2(812.667, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1ijy"]
size = Vector2(33.3333, 48)

[sub_resource type="Animation" id="Animation_gppc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u1crw"]
resource_name = "flag"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 9, 9, 9, 9, 9, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_biljf"]
_data = {
"RESET": SubResource("Animation_gppc5"),
"flag": SubResource("Animation_u1crw")
}

[node name="Level2" type="Node2D"]
position = Vector2(73, 70)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_wrs2e")

[node name="PinkPlayer" parent="." instance=ExtResource("1_ppqqo")]
position = Vector2(34.6667, 319.333)
script = ExtResource("2_wsqd8")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9/xUAAAACAAUAAAD9/xYAAAACAAUAAAD9/xcAAAACAAUAAAD9/xgAAAACAAYAAAD9/xkAAAAAAAQAAAD+/xUAAAAGAAgAAAD+/xYAAAAGAAkAAAD+/xcAAAAGAAkAAAD+/xgAAAAGAAoAAAD+/xkAAAABAAQAAAD//xQAAAAMAAEAAAD//xUAAAAHAAgAAAD//xYAAAAHAAkAAAD//xcAAAAHAAkAAAD//xgAAAAHAAoAAAD//xkAAAABAAQAAAAAABUAAAAHAAgAAAAAABYAAAAHAAkAAAAAABcAAAANAAEAAAAAABgAAAANAAIAAAAAABkAAAABAAQAAAABABUAAAAHAAgAAAABABYAAAAHAAkAAAABABcAAAAOAAEAAAABABgAAAAOAAIAAAABABkAAAABAAQAAAACABUAAAAHAAgAAAACABYAAAAHAAkAAAACABcAAAAHAAkAAAACABgAAAAHAAoAAAACABkAAAABAAQAAAADABUAAAAIAAgAAAADABYAAAAIAAkAAAADABcAAAAHAAgAAAADABgAAAAHAAoAAAADABkAAAABAAQAAAAEAA4AAAAGAAgAAAAEAA8AAAAGAAkAAAAEABAAAAAGAAoAAAAEABcAAAAHAAgAAAAEABgAAAAHAAoAAAAEABkAAAABAAQAAAAFAA4AAAAHAAgAAAAFAA8AAAAHAAkAAAAFABAAAAAHAAoAAAAFABcAAAAIAAgAAAAFABgAAAAIAAoAAAAFABkAAAABAAQAAAAGAA4AAAAHAAgAAAAGAA8AAAAHAAkAAAAGABAAAAAHAAoAAAAHAA4AAAAHAAgAAAAHAA8AAAAHAAkAAAAHABAAAAAHAAoAAAAIAA4AAAAHAAgAAAAIAA8AAAAHAAkAAAAIABAAAAAHAAoAAAAJAA4AAAAHAAgAAAAJAA8AAAAHAAkAAAAJABAAAAAHAAoAAAAJABgAAAAMAAEAAAAJABkAAAABAAQAAAAKAA4AAAAIAAgAAAAKAA8AAAAIAAkAAAAKABAAAAAIAAoAAAAKABcAAAANAAEAAAAKABgAAAANAAIAAAAKABkAAAABAAQAAAALABcAAAAOAAEAAAALABgAAAAOAAIAAAALABkAAAABAAQAAAAMABgAAAAMAAEAAAAMABkAAAABAAQAAAD9/xEAAAAUAAQAAAD+/xEAAAAVAAQAAAD//xEAAAAVAAQAAAAAABEAAAAVAAQAAAD9/xAAAAAVAAQAAAD+/xAAAAAVAAQAAAARABcAAAAGAAgAAAARABgAAAAGAAoAAAASABcAAAAHAAgAAAATABcAAAAHAAgAAAAUABcAAAAHAAgAAAASABgAAAAHAAoAAAATABgAAAAHAAoAAAAUABgAAAAHAAoAAAAVABgAAAAHAAoAAAAWABgAAAAHAAoAAAAXABgAAAAHAAoAAAAYABgAAAAHAAoAAAAZABgAAAAHAAoAAAAaABgAAAAHAAoAAAAbABgAAAAHAAoAAAAcABgAAAAHAAoAAAAdABgAAAAHAAoAAAAeABgAAAAHAAoAAAAfABgAAAAIAAoAAAASABYAAAAGAAgAAAATABYAAAAHAAgAAAATABUAAAAGAAkAAAATABQAAAAGAAgAAAAUABQAAAAHAAgAAAAVABQAAAAHAAgAAAAWABQAAAAHAAgAAAAXABQAAAAHAAgAAAAYABQAAAAHAAgAAAAZABQAAAAHAAgAAAAaABQAAAAHAAgAAAAbABQAAAAHAAgAAAAcABQAAAAHAAgAAAAdABQAAAAHAAgAAAAeABQAAAAHAAgAAAAfABQAAAAIAAgAAAAfABUAAAAIAAkAAAAfABYAAAAIAAkAAAAfABcAAAAIAAkAAAAZABYAAAAJAAkAAAAaABYAAAAKAAkAAAAWABUAAAAHAAkAAAAWABYAAAAJAAkAAAAVABYAAAAHAAkAAAAUABYAAAAHAAkAAAAUABUAAAAHAAkAAAAVABUAAAAHAAkAAAAWABcAAAAHAAkAAAAVABcAAAAHAAkAAAAXABcAAAAHAAkAAAAYABcAAAAHAAkAAAAZABcAAAAHAAkAAAAaABcAAAAHAAkAAAAbABcAAAAHAAkAAAAcABcAAAAHAAkAAAAdABcAAAAHAAkAAAAeABcAAAAHAAkAAAAeABYAAAAHAAkAAAAeABUAAAAHAAkAAAAdABUAAAAHAAkAAAAcABUAAAAHAAkAAAAbABUAAAAHAAkAAAAbABYAAAAHAAkAAAAcABYAAAAJAAkAAAAdABYAAAAKAAkAAAAaABUAAAAHAAkAAAAZABUAAAAHAAkAAAAYABUAAAAHAAkAAAAXABUAAAAHAAkAAAAXABYAAAAKAAkAAAAYABYAAAAHAAkAAAARAA8AAAAUAAQAAAARABAAAAAUAAUAAAASAA8AAAAVAAQAAAASABAAAAAVAAUAAAATAA8AAAAUAAQAAAATABAAAAAUAAUAAAAUAA8AAAAVAAQAAAAUABAAAAAVAAUAAAAVAA8AAAAUAAQAAAAVABAAAAAUAAUAAAAWAA8AAAAVAAQAAAAWABAAAAAVAAUAAAAXAA8AAAAUAAQAAAAXABAAAAAUAAUAAAAYAA8AAAAVAAQAAAAYABAAAAAVAAUAAAAZAA8AAAAUAAQAAAAZABAAAAAUAAUAAAAaAA8AAAANAAkAAAAaABAAAAANAAoAAAAbAA8AAAAOAAkAAAAbABAAAAAOAAoAAAARABkAAAABAAQAAAASABkAAAABAAQAAAATABkAAAABAAQAAAAUABkAAAABAAQAAAAVABkAAAABAAQAAAAWABkAAAABAAQAAAAXABkAAAABAAQAAAAYABkAAAABAAQAAAAZABkAAAABAAQAAAAaABkAAAABAAQAAAAbABkAAAABAAQAAAAcABkAAAABAAQAAAAdABkAAAABAAQAAAAeABkAAAABAAQAAAAfABkAAAABAAQAAAAgAAwAAAAGAAgAAAAgAA0AAAAGAAoAAAAhAA0AAAAHAAoAAAAiAA0AAAAHAAoAAAAjAA0AAAAHAAoAAAAkAA0AAAAHAAoAAAAlAA0AAAAHAAkAAAAmAA0AAAAHAAkAAAAnAA0AAAAHAAkAAAAoAA0AAAAHAAkAAAAhAAwAAAAHAAgAAAAiAAwAAAAHAAgAAAAjAAwAAAAHAAgAAAAkAAwAAAAHAAgAAAAjAAsAAAAGAAkAAAAjAAoAAAAGAAkAAAAjAAkAAAAGAAkAAAAkAAkAAAAHAAkAAAAlAAkAAAAHAAkAAAAmAAkAAAAHAAkAAAAiAAsAAAAMAAEAAAAjAAgAAAAGAAkAAAAjAAcAAAAGAAgAAAAkAAgAAAAHAAkAAAAkAAoAAAAHAAkAAAAlAAoAAAAHAAkAAAAmAAoAAAAHAAgAAAAmAAsAAAAHAAkAAAAkAAsAAAAHAAkAAAAlAAsAAAAHAAkAAAAmAAwAAAAHAAkAAAAlAAwAAAAHAAkAAAAnAAwAAAAHAAkAAAAkAAcAAAAHAAgAAAAlAAcAAAAHAAgAAAAmAAcAAAAHAAgAAAAlAAgAAAAHAAkAAAAmAAgAAAAHAAkAAAAlAA4AAAAGAAoAAAAmAA4AAAAHAAoAAAAnAA4AAAAHAAoAAAAoAA4AAAAHAAoAAAAnAAoAAAAHAAgAAAAoAAoAAAAHAAgAAAApAAoAAAAHAAgAAAAqAAoAAAAHAAgAAAArAAoAAAAHAAgAAAAsAAoAAAAHAAgAAAAoAAsAAAAHAAkAAAAnAAsAAAAHAAkAAAAoAAwAAAAHAAkAAAApAAwAAAAHAAkAAAApAAsAAAAHAAkAAAAqAAsAAAAHAAkAAAAqAAwAAAAHAAkAAAApAA0AAAAHAAkAAAAqAA0AAAAHAAkAAAArAA0AAAAHAAkAAAArAAwAAAAHAAkAAAArAAsAAAAHAAkAAAAsAAsAAAAHAAkAAAAsAAwAAAAHAAkAAAAsAA0AAAAHAAkAAAAsAA4AAAAHAAoAAAArAA4AAAAHAAoAAAAqAA4AAAAHAAoAAAApAA4AAAAHAAoAAAAtAAoAAAAHAAgAAAAuAAoAAAAIAAgAAAAuAAsAAAAIAAkAAAAuAAwAAAAIAAkAAAAuAA0AAAAMAAkAAAAuAA4AAAAMAAkAAAAtAA4AAAAMAAkAAAAtAA0AAAAHAAkAAAAtAAwAAAAHAAkAAAAtAAsAAAAHAAkAAAAXAAoAAAARAAAAAAAYAAoAAAASAAAAAAAZAAoAAAATAAAAAAAaAAoAAAARAAAAAAAbAAoAAAASAAAAAAAcAAoAAAATAAAAAAAXAAkAAAAMAAEAAAAfABMAAAAOAAoAAAAeABMAAAANAAoAAAAeABIAAAANAAkAAAAfABIAAAAOAAkAAAAdABMAAAAMAAkAAAA=")
tile_set = SubResource("TileSet_uqbpu")

[node name="DeathArea" type="Area2D" parent="."]
position = Vector2(2, -78.6667)
script = ExtResource("4_kifog")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(354.667, 520)
shape = SubResource("RectangleShape2D_xtaw0")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -96.0
offset_top = -148.0
offset_right = 1433.0
offset_bottom = 601.0
texture = ExtResource("5_y3ypb")
expand_mode = 3

[node name="AreaTrigger2" type="Area2D" parent="."]
script = ExtResource("6_qbf1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrigger2"]
position = Vector2(688, 136)
shape = SubResource("RectangleShape2D_q1ijy")

[node name="Sprite2D" type="Sprite2D" parent="AreaTrigger2"]
position = Vector2(685.333, 128)
texture = ExtResource("7_tg0eh")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="AreaTrigger2"]
libraries = {
"": SubResource("AnimationLibrary_biljf")
}

[node name="AreaTrigger" type="Area2D" parent="."]
script = ExtResource("6_qbf1l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrigger"]
position = Vector2(126.667, 200.667)
shape = SubResource("RectangleShape2D_q1ijy")

[node name="Sprite2D" type="Sprite2D" parent="AreaTrigger"]
position = Vector2(124, 192)
texture = ExtResource("7_tg0eh")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="AreaTrigger"]
libraries = {
"": SubResource("AnimationLibrary_biljf")
}

[node name="Spawner" type="Node2D" parent="."]
z_index = 1
position = Vector2(187.333, -274)
script = ExtResource("9_om0mb")
obstacle = ExtResource("10_kiunl")

[connection signal="body_entered" from="DeathArea" to="DeathArea" method="_on_Death_Area_body_entered"]
[connection signal="body_entered" from="AreaTrigger2" to="." method="_on_AreaTrigger2_body_entered"]
[connection signal="body_entered" from="AreaTrigger" to="." method="_on_AreaTrigger1_body_entered"]
